--- a/program.html
+++ b/program.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p>PROGRAM</p>
+      <p>PROGRAM aaa</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Aplace4Places">Aplace4places</a> is maintained by <a href="https://github.com/cvbrandoe">Carmen Brando</a> and <a href="https://github.com/francescafrontini">Francesca Frontini</a>.</span>
