--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1 class="project-name">Aplace4places</h1>
       <h2 class="project-tagline">DH 2016 Workshop: A place for places: current trends and challenges in the development and use of geo-historical gazetteers</h2>
       <a href="index.html" class="btn">Home</a>
+      <a href="description.html" class="btn">Description</a>
       <a href="program.html" class="btn">Program</a>
       <a href="info.html" class="btn">Info</a>
     </section>
