--- a/program.html
+++ b/program.html
@@ -21,6 +21,14 @@
 
     <section class="main-content">
       <p>PROGRAM aaa</p>
+      <p><b>Christopher Donaldson</b> (University of Birmingham): Extracting and visualizing the geographies in historical travel writing</p>
+      <p><b>Karl Grossner</b>(Stanford University): Joining Place and Period in Historical Gazetteers</p>
+      <p><b>Katherine Hart Weimer</b> (Rice University): Geoinformation in Digital Libraries and Linked Data</p>
+      <p><b>Maurizio Lana</b> (Università del Piemonte Orientale): Annotation of place mentions in Latin Literature</p>
+      <p><b>Bruno Martins</b> (University of Lisbon): NLP and IR methods for handling geospatial information in textual documents</p>
+      <p><b>Patricia Murrieta-Flores</b>  (University of Chester): Non-locational and fantastic places in Medieval Romances</p>
+      <p><b>Michael Page</b>  (Emory University): Atlanta Explorer: Historical Geocoding & the City</p>
+      <p><b>Humphrey Southall</b>(University of Portsmouth): Engaging the wider public with historical gazetteers</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Aplace4Places">Aplace4places</a> is maintained by <a href="https://github.com/cvbrandoe">Carmen Brando</a> and <a href="https://github.com/francescafrontini">Francesca Frontini</a>.</span>
