--- a/program.html
+++ b/program.html
@@ -27,7 +27,7 @@
       <p><b>Maurizio Lana</b> (Università del Piemonte Orientale): Annotation of place mentions in Latin Literature</p>
       <p><b>Bruno Martins</b> (University of Lisbon): NLP and IR methods for handling geospatial information in textual documents</p>
       <p><b>Patricia Murrieta-Flores</b>  (University of Chester): Non-locational and fantastic places in Medieval Romances</p>
-      <p><b>Michael Page</b>  (Emory University): Atlanta Explorer: Historical Geocoding & the City</p>
+      <p><b>Michael Page</b>  (Emory University): Atlanta Explorer: Historical Geocoding \& the City</p>
       <p><b>Humphrey Southall</b>(University of Portsmouth): Engaging the wider public with historical gazetteers</p>
 
       <footer class="site-footer">
