--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <p><b>When</b>: Monday, 11/Jul/2016: 9:30am - 6:00pm. Please save the date</p>
       <p><b>Where</b>: Kraków, Poland</p>
       <p>Co-located with <a href="http://dh2016.adho.org">DH2016</a></p>
+      
+      <p><img src="ilc_logo.png" width="50" height="50" /></p>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Aplace4Places">Aplace4places</a> is maintained by <a href="https://github.com/cvbrandoe">Carmen Brando</a> and <a href="https://github.com/francescafrontini">Francesca Frontini</a>.</span>
 
