--- a/info.html
+++ b/info.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <section class="page-header">
-     <h1 class="project-name">Aplace4places</h1>
+      <h1 class="project-name">Aplace4places</h1>
+      <h2 class="project-tagline">Current trends and challenges in the development and use of geo-historical gazetteers</h2>
       <h2 class="project-tagline">DH 2016 Pre-conference Workshop</h2>
-      <h2 class="project-tagline">A place for places: current trends and challenges in the development and use of geo-historical gazetteers</h2>
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
       <a href="program.html" class="btn">Program</a>
