--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </section>
 
     <section class="main-content">
-      <p style="LINE-HEIGHT:30px;"><b>A place For Places</b> aims to investigate the latest developments of geo-historical gazetteers and their impact in natural language processing and digital humanities studies. In particular the workshop will deal with crucial problems concerning the geo-spatial models of representation for ancient places, and the management of temporal information for geographic features in general. Current projects concerning the publication of geo-historical data as Linked Open Data, as well as their exploitation for annotating and enriching texts will also be discussed, alongside with more theoretical issues on vocabularies and ontologies. A group of well known invited scholars will hold 15 minutes presentations, discussing different and approaches to the topic, ranging from engineering, data models, standards and publication, corpus annotation models, visualization. Finally, an interactive discussion with workshop attendees as well as a sum up panel will constitute an occasion for the community to gather together and harmonize efforts</p>
+      <p style="LINE-HEIGHT:30px;"><b>A place For Places</b> aims to investigate the latest developments of geo-historical gazetteers and their impact in natural language processing and digital humanities studies. In particular the workshop will deal with crucial problems concerning the geo-spatial models of representation for ancient places, and the management of temporal information for geographic features in general. </p>
+      <p>Current projects concerning the publication of geo-historical data as Linked Open Data, as well as their exploitation for annotating and enriching texts will also be discussed, alongside with more theoretical issues on vocabularies and ontologies. </p>
+      <p> A group of well known invited scholars will hold 15 minutes presentations, discussing different and approaches to the topic, ranging from engineering, data models, standards and publication, corpus annotation models, visualization. Finally, an interactive discussion with workshop attendees as well as a sum up panel will constitute an occasion for the community to gather together and harmonize efforts</p>
       <br>
 	  <center>
       <p><b>The workshop is endorsed by the <a href="http://www.geohumanities.org/" target="_blank">The GeoHumanities Special Interest Group (SIG)</a> <br> of the <a href="http://adho.org" target="_blank">Alliance of Digital Humanities Organizations</a> </b></p>
@@ -29,7 +31,7 @@
 	  </center>
 	  <br><br>
 
-      <p><b>When</b>: Monday, 11/Jul/2016: 9:30am - 6:00pm. Please save the date</p>
+      <p><b>When</b>: Monday, 11/Jul/2016: 9:30am - 6:00pm. Save the date!</p>
       <p><b>Where</b>: Kraków, Poland</p>
       <p>Co-located with <a href="http://dh2016.adho.org">DH2016</a></p>
       
