registration, instructors, program of the day

--- a/description.html
+++ b/description.html
@@ -16,8 +16,8 @@
       <h2 class="project-tagline">DH 2016 Pre-conference Workshop</h2>
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
+      <a href="instructors.html" class="btn">Instructors</a>
       <a href="program.html" class="btn">Program</a>
-      <a href="info.html" class="btn">Practical Info</a>
     </section>
 
     <section class="main-content" style="LINE-HEIGHT:30px;">
@@ -29,7 +29,6 @@
 
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/Aplace4Places">Aplace4places</a> is maintained by <a href="https://github.com/cvbrandoe">Carmen Brando</a> and <a href="https://github.com/francescafrontini">Francesca Frontini</a>.</span>
       </footer>
 
     </section>
