--- a/program.html
+++ b/program.html
@@ -16,24 +16,34 @@
       <h2 class="project-tagline">DH 2016 Pre-conference Workshop</h2>
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
+      <a href="instructors.html" class="btn">Instructors</a>
       <a href="program.html" class="btn">Program</a>
-      <a href="info.html" class="btn">Practical Info</a>
     </section>
 
     <section class="main-content">
-      <p>The proposed program of the day (to be completed)</p>
-      <p><b>Christopher Donaldson</b> (University of Birmingham), <i>Extracting and visualizing the geographies in historical travel writing</i>: This presentation will introduce a procedure for the automated extraction and resolution of geographical information from a corpus of historical writings about the English Lake District. The research on which the presentation is based is using the spatial analysis of geo-historical linked data sets to achieve a more comprehensive and refined understanding of how the landscape of the Lake District was perceived, represented, and experienced in the past.</p>
-      <p><b>Karl Grossner</b>(Stanford University), <i>Joining Place and Period in Historical Gazetteers</i>: Places referred to in historical documents and gazetteers have temporal as well as spatial extents. Likewise, historical periods have spatial extents. However existing data models and format standards and the mapping and timeline software that use them do not reflect this. I will discuss recent work on <i>Topotime</i>, an extension to the GeoJSON format adding temporal expressions, and allowing for some types of uncertainty encountered in historical data.</p>
-      <p><b>Katherine Hart Weimer</b> (Rice University), <i>Geoinformation in Digital Libraries and Linked Data</i>: A wealth of geographic information is included in library catalogs, with existing structures for name disambiguation, cross-referencing and inclusion of geographic coordinates. Recently, efforts are underway in libraries to convert this data into Linked Data allowing for cross platform applications. The presentation describes an experiment in this sense.</p>
-      <p><b>Maurizio Lana</b> (Università del Piemonte Orientale), <i>Annotation of place mentions in Latin Literature</i>: Annotation of place mentions in Latin Literature. The annotation pipeline uses parsing+NER but later mentions are manually checked and referenced to external gazetteers such as Pleiades. The novelty of the project is the GeoLat GO! ontology that allows for a more complex annotation.</p>
-      <p><b>Bruno Martins</b> (University of Lisbon), <i>NLP and IR methods for handling geospatial information in textual documents</i>: In my talk, I will present a brief survey of techniques for handling geospatial information within textual documents, including work at our team in the University of Lisbon, and other methods proposed within the Computational Linguistics and Information Retrieval communities. I will discuss methods to address the problems of (i) document geocoding, (ii) toponym resolution, and (iii) selecting geographically relevant key-phrases. Applications within the broad field of Digital Humanities, and Spatial Humanities in particular, will also be outlined.</p>
-      <p><b>Patricia Murrieta-Flores</b>  (University of Chester), <i>Non-locational and fantastic places in Medieval Romances</i>: So far, research in the spatial humanities has been mainly concerned with geographically precise information or what could be considered as ‘real’ places in historical and literary sources. Nevertheless, non-locational places play an important role in narratives of all sorts of sources from the fantastic, to geographically vague travel accounts. This is an important limitation in the analysis of place in the Digital Humanities. Using Medieval Romances as an example, this presentation will discuss the challenges posed by literary narratives of place in terms not only of disambiguation, but also reference to fantastic and non-locational places.</p>
-      <p><b>Michael Page</b>  (Emory University), <i>Atlanta Explorer: Historical Geocoding \& the City</i>: Atlanta Explorer focuses on building datasets and geospatial tools to explore the history of the city. Completed is a geodatabase and geocoder for circa 1930 and the pilot 3D virtual environment. The next phase includes producing geocoders for the remaining years (1868-1930) and therefore strategies and methods for developing historical geocoding datasets and tools for place discovery will be discussed. Our goal is to also share the underlying data with the community CityGML as how we would likely share and archive the model.</p>
-      <p><b>Rainer Simon</b> (Austrian Institute of Technology), <i>The Pelagios project</i>: an international community initiative concerned with the development of Linked Open Data methods, tools and services to better interconnect geo-historical datasets. In its most recent project phase (“Pelagios 3 - Early Geospatial Documents”), Pelagios has developed <i>Recogito</i>, a semi-automatic geo-annotation tool; <i>Peripleo</i>, a geotemporal search engine. Furthermore, Pelagios has annotated more than 300 historical sources from different cartographic traditions, collecting more than 120,000 place references (hand-verifying approx. half of them so far) in literary texts and early maps.</p>
-      <p><b>Humphrey Southall</b> (University of Portsmouth), <i>Engaging the wider public with historical gazetteers</i>: Gazetteers are a powerful tool for humanities researchers, but they are also of great fascination and utility for the general public. That interest (1) enables academic projects to achieve wider “impact”, (2) enables popular web sites to be sustained by advertising income advertising income, and (3) enables expansion through crowd-sourcing. This presentation covers experience with three related projects: the established <i>Vision of Britain site</i>, 1.6m annual visitors generating c. £20,000 per annum; <i>PastPlace</i>, our new global Linked Data gazetteer which uses Wikidata as a spine to which we are adding historical toponym attestations by various routes; and <i>GB1900</i>, a crowd-sourced gazetteer building project developed in collaboration with the National Libraries of Wales and of Scotland, extracting toponyms from a complete set of 1:10,560 maps of Great Britain.</p>
-
+      <p>The tentative program of the day is listed below.</p>
+      <table>
+      <tr>
+      	<td><b>Time</b></td> <td><b>Content</b></td>
+      </tr>
+      <tr>
+      	<td>9.30 am</td> <td>First presentation session including discussions and short break</td>
+      </tr>
+      <tr>
+      	<td>12.30 pm</td> <td>Lunch break</td>
+      </tr>
+      <tr>
+      	<td>1.30 pm</td> <td>Second presentation session including discussions and short break</td>
+      </tr>
+      <tr>
+      	<td>3.00 pm</td> <td>Speed presenting and breakout discussions </td>      	
+      </tr>
+      <tr> <td>5.00 pm</td> <td>Wrap up session including an expert panel discussion</td></tr>
+      </table>
+  	 
+  	  <p>The workshop will conclude at 6 pm.</p>
+  	  
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/Aplace4Places">Aplace4places</a> is maintained by <a href="https://github.com/cvbrandoe">Carmen Brando</a> and <a href="https://github.com/francescafrontini">Francesca Frontini</a>.</span>
       </footer>
 
     </section>
