--- a/description.html
+++ b/description.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline">Current trends and challenges in the development and use of geo-historical gazetteers</h2>
       <h2 class="project-tagline">DH 2016 Pre-conference Workshop</h2>
       <a href="index.html" class="btn">Home</a>
-      <a href="description.html" class="btn">Description</a>
+      <a href="description.html" class="btn"><b>Description</b></a>
       <a href="instructors.html" class="btn">Instructors</a>
       <a href="program.html" class="btn">Program</a>
     </section>
