--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <section class="page-header">
-      <h1 class="project-name">Aplace4places</h1>
-      <h2 class="project-tagline">Current trends and challenges in the development and use of geo-historical gazetteers</h2>
-      <h2 class="project-tagline">DH 2016 Pre-conference Workshop</h2>
-      <a href="index.html" class="btn">Home</a>
+    <section class="page-header" style="background-color:white; background-image:url(images/Waldseemüller1506map.jpg);background-size:50%;">
+      <h1 class="project-name"><span>Aplace4places</span></h1>
+      <h2 class="project-tagline"><span><b>Current trends and challenges in the development and use of geo-historical gazetteers</b></span></h2>
+      <h2 class="project-tagline"><span><b>DH 2016 Pre-conference Workshop</b></span></h2>
+      <a href="index.html" class="btn"><b>Home</b></a>
       <a href="description.html" class="btn">Description</a>
       <a href="instructors.html" class="btn">Instructors</a>
       <a href="program.html" class="btn">Program</a>
@@ -48,9 +48,9 @@
       </table>
       <table>
       	<tr>
-      		<td style="border-width:1px; border-color:white;"><p><img src="images/logo-IGN.png" height="120" /></p></td>
-      		<td style="border-width:1px; border-color:white;"><p><img src="images/ilc_logo.png" height="100" /></p></td>
-      		<td style="border-width:1px; border-color:white;"><p><img src="images/CLARIN-IT_Logo_Square.png" height="120" /></p></td>	
+      		<td style="border-width:1px; border-color:white;"><p><a href="http://www.ign.fr/"><img src="images/logo-IGN.png" height="120" /></a></p></td>
+      		<td style="border-width:1px; border-color:white;"><p><a href="http://www.ilc.cnr.it/"><img src="images/ilc_logo.png" height="100" /></a></p></td>
+      		<td style="border-width:1px; border-color:white;"><p><a href="http://www.clarin.eu/news/italy-member-clarin-eric"><img src="images/CLARIN-IT_Logo_Square.png" height="120" /></a></p></td>	
       	</tr>      
       </table>
       
