--- a/instructors.html
+++ b/instructors.html
@@ -16,7 +16,7 @@
       <h2 class="project-tagline">DH 2016 Pre-conference Workshop</h2>
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
-      <a href="instructors.html" class="btn">Instructors</a>
+      <a href="instructors.html" class="btn"><b>Instructors</b></a>
       <a href="program.html" class="btn">Program</a>
     </section>
 
