--- a/program.html
+++ b/program.html
@@ -17,7 +17,7 @@
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
       <a href="instructors.html" class="btn">Instructors</a>
-      <a href="program.html" class="btn">Program</a>
+      <a href="program.html" class="btn"><b>Program</b></a>
     </section>
 
     <section class="main-content">
