update main image

--- a/program.html
+++ b/program.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <section class="page-header">
-      <h1 class="project-name">Aplace4places</h1>
-      <h2 class="project-tagline">Current trends and challenges in the development and use of geo-historical gazetteers</h2>
-      <h2 class="project-tagline">DH 2016 Pre-conference Workshop</h2>
+   <section class="page-header" style="background-color:white; background-image:url(images/Waldseemüller1506map.jpg);background-size:50%;">
+      <h1 class="project-name"><span>Aplace4places</span></h1>
+      <h2 class="project-tagline"><span><b>Current trends and challenges in the development and use of geo-historical gazetteers</b></span></h2>
+      <h2 class="project-tagline"><span><b>DH 2016 Pre-conference Workshop</b></span></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
       <a href="instructors.html" class="btn">Instructors</a>
