update header image

--- a/description.html
+++ b/description.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <section class="page-header" style="background-color:white; background-image:url(images/Waldseemüller1506map.jpg);background-size:50%;">
+     <section class="page-header" style="background-color:white; background-image:url(images/main-header-bigger.jpg);background-size:100%;">
       <h1 class="project-name"><span>Aplace4places</span></h1>
       <h2 class="project-tagline"><span><b>Current trends and challenges in the development and use of geo-historical gazetteers</b></span></h2>
       <h2 class="project-tagline"><span><b>DH 2016 Pre-conference Workshop</b></span></h2>
