--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-    <section class="page-header" style="background-color:white; background-image:url(images/main-header-bigger.jpg);background-size:100%;">
+    <section class="page-header" style="background-color:white; background-image:url(images/proposition2.jpg);background-size:100%;">
       <h1 class="project-name"><span>Aplace4places</span></h1>
       <h2 class="project-tagline"><span><b>Current trends and challenges in the development and use of geo-historical gazetteers</b></span></h2>
       <h2 class="project-tagline"><span><b>DH 2016 Pre-conference Workshop</b></span></h2>
@@ -22,8 +22,8 @@
 
     <section class="main-content">
       <p style="LINE-HEIGHT:30px;"><b>A Place For Places</b> aims to investigate the latest developments of geo-historical gazetteers and their impact in natural language processing and digital humanities studies. In particular the workshop will deal with crucial problems concerning the geo-spatial models of representation for ancient places, and the management of temporal information for geographic features in general. Current projects concerning the publication of geo-historical data as Linked Open Data, as well as their exploitation for annotating and enriching texts will also be discussed, alongside with more theoretical issues on vocabularies and ontologies.</p>
-      <p>A group of <b>well known invited scholars</b> will hold 15 minutes presentations, discussing different and approaches to the topic, ranging from engineering, data models, standards and publication, corpus annotation models, visualization. An interactive discussion with workshop attendees about their current projects as well as a sum up panel will constitute an occasion for the community to gather together and harmonize efforts</p>
-      <p>The intended <b>audience</b> are scholars, data designers, and software developers who are or will be involved in research projects concerning the spatial humanities.</p>
+      <p style="LINE-HEIGHT:30px;">A group of <b>well known invited scholars</b> will hold 15 minutes presentations, discussing different and approaches to the topic, ranging from engineering, data models, standards and publication, corpus annotation models, visualization. An interactive discussion with workshop attendees about their current projects as well as a sum up panel will constitute an occasion for the community to gather together and harmonize efforts</p>
+      <p style="LINE-HEIGHT:30px;">The intended <b>audience</b> are scholars, data designers, and software developers who are or will be involved in research projects concerning the spatial humanities.</p>
       <br>
 	  <center>
       <p><b>The workshop is endorsed by the <a href="http://www.geohumanities.org/" target="_blank">The GeoHumanities Special Interest Group (SIG)</a> <br> of the <a href="http://adho.org" target="_blank">Alliance of Digital Humanities Organizations</a> </b></p>
@@ -41,7 +41,7 @@
 
       <table>
       	<tr> 
-      		<td style="border-width:1px; border-color:white;"><p><b>Carmen Brando</b><br>Institut Géographique National (IGN), Paris</p>
+      		<td style="border-width:1px; border-color:white;"><p><b>Carmen Brando</b><br>Institut National de l'Information Géographique et Forestière (IGN), Paris</p>
       		</td>
       		<td style="border-width:1px; border-color:white;"><p><b>Francesca Frontini</b><br>Istituto di Linguistica Computazionale "A. Zampolli" - CNR - Pisa & CLARIN-IT</p></td>      		    
       	</tr>      	
