--- a/instructors.html
+++ b/instructors.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
-      <section class="page-header" style="background-color:white; background-image:url(images/proposition2.jpg);background-size:100%;">
-      <h1 class="project-name"><span>Aplace4places</span></h1>
-      <h2 class="project-tagline"><span><b>Current trends and challenges in the development and use of geo-historical gazetteers</b></span></h2>
-      <h2 class="project-tagline"><span><b>DH 2016 Pre-conference Workshop</b></span></h2>
+     <section class="page-header" style="background-color:white; background-image:url(images/proposition2.jpg);background-size:100%;">
+      <h1 class="project-name"><span>&nbsp;Aplace4places&nbsp;</span></h1>
+      <h2 class="project-tagline"><span><b>&nbsp;Current trends and challenges in the development and use of geo-historical gazetteers&nbsp;</b></span></h2>
+      <h2 class="project-tagline"><span><b>&nbsp;DH 2016 Pre-conference Workshop&nbsp;</b></span></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
       <a href="instructors.html" class="btn"><b>Instructors</b></a>
