--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p style="LINE-HEIGHT:30px;">The intended <b>audience</b> are scholars, data designers, and software developers who are or will be involved in research projects concerning the spatial humanities.</p>
       <br>
 	  <center>
-      <p><b>The workshop is endorsed by the <a href="http://www.geohumanities.org/" target="_blank">The GeoHumanities Special Interest Group (SIG)</a> <br> of the <a href="http://adho.org" target="_blank">Alliance of Digital Humanities Organizations</a> </b></p>
+      <p><b>The workshop is endorsed by <a href="http://www.geohumanities.org/" target="_blank">The GeoHumanities Special Interest Group (SIG)</a> <br> of the <a href="http://adho.org" target="_blank">Alliance of Digital Humanities Organizations</a> </b></p>
       <p><img src="images/logo-sig.png" height="50" /></p>   
 	  </center>
 	  <br><br>
