--- a/description.html
+++ b/description.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline"><span><b>&nbsp;Current trends and challenges in the development and use of geo-historical gazetteers&nbsp;</b></span></h2>
       <h2 class="project-tagline"><span><b>&nbsp;DH 2016 Pre-conference Workshop&nbsp;</b></span></h2>      <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn"><b>Description</b></a>
-      <a href="instructors.html" class="btn">Instructors</a>
+      <a href="instructors.html" class="btn">Presenters</a>
       <a href="program.html" class="btn">Program</a>
     </section>
 
