--- a/program.html
+++ b/program.html
@@ -16,7 +16,7 @@
       <h2 class="project-tagline"><span><b>&nbsp;DH 2016 Pre-conference Workshop&nbsp;</b></span></h2>
       <a href="index.html" class="btn">Home</a>
       <a href="description.html" class="btn">Description</a>
-      <a href="instructors.html" class="btn">Instructors</a>
+      <a href="instructors.html" class="btn">Presenters</a>
       <a href="program.html" class="btn"><b>Program</b></a>
     </section>
 
