update clarin-it website

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       	<tr>
       		<td style="border-width:1px; border-color:white;"><p><a href="http://www.ign.fr/"><img src="images/logo-IGN.png" height="120" /></a></p></td>
       		<td style="border-width:1px; border-color:white;"><p><a href="http://www.ilc.cnr.it/"><img src="images/ilc_logo.png" height="100" /></a></p></td>
-      		<td style="border-width:1px; border-color:white;"><p><a href="http://www.clarin.eu/news/italy-member-clarin-eric"><img src="images/CLARIN-IT_Logo_Square.png" height="120" /></a></p></td>	
+      		<td style="border-width:1px; border-color:white;"><p><a href="http://www.clarin-it.it/"><img src="images/CLARIN-IT_Logo_Square.png" height="120" /></a></p></td>	
       	</tr>      
       </table>
       
