--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       </table>
       <table>
       	<tr>
+      		<td style="border-width:1px; border-color:white;"><p><a href="http://www.ehess.fr/"><img src="images/Ehess_logo.svg.png" height="120" /></a></p></td>
       		<td style="border-width:1px; border-color:white;"><p><a href="http://www.ign.fr/"><img src="images/logo-IGN.png" height="120" /></a></p></td>
       		<td style="border-width:1px; border-color:white;"><p><a href="http://www.ilc.cnr.it/"><img src="images/ilc_logo.png" height="100" /></a></p></td>
       		<td style="border-width:1px; border-color:white;"><p><a href="http://www.clarin-it.it/"><img src="images/CLARIN-IT_Logo_Square.png" height="120" /></a></p></td>	
