--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <table>
       	<tr> 
-      		<td style="border-width:1px; border-color:white;"><p><b>Carmen Brando</b><br>Centre de recherches historiques (<a ref="http://crh.ehess.fr/">CRH</a>) de l'EHESS (UMR 8558), Paris</p>
+      		<td style="border-width:1px; border-color:white;"><p><b>Carmen Brando</b><br>Centre de recherches historiques (<a href="http://crh.ehess.fr/">CRH</a>) de l'EHESS (UMR 8558), Paris</p>
       		</td>
       		<td style="border-width:1px; border-color:white;"><p><b>Francesca Frontini</b><br>Istituto di Linguistica Computazionale "A. Zampolli" - CNR - Pisa & CLARIN-IT</p></td>      		    
       	</tr>      	
