new program is online!

--- a/program.html
+++ b/program.html
@@ -21,28 +21,49 @@
     </section>
 
     <section class="main-content">
-      <p>The tentative program of the day is listed below.</p>
+      <p>The program of the day is listed below.</p>
       <table>
       <tr>
       	<td><b>Time</b></td> <td><b>Content</b></td>
       </tr>
       <tr>
-      	<td>9.30 am</td> <td>First presentation session including discussions and short break</td>
+      	<td>9.30 am</td> <td>Welcome and introduction</td>
+      </tr>
+      <tr>
+      	<td>9.40 am</td> <td>First presentation session including discussions
+      	<ul> <li>Rainer Simon (Austrian Institute of Technology), <b>The Pelagios project</b></li>
+      	<li>Katherine Hart Weimer (Rice University),<b>Geoinformation in Digital Libraries and Linked Data</b></li>
+      	<li>Maurizio Lana (Università del Piemonte Orientale), <b>Annotation of place mentions in Latin Literature</b></li>
+      	<li>Humphrey Southall (University of Portsmouth), <b>Engaging the wider public with historical gazetteers</b></li></ul></td>
+      </tr>
+      <tr>
+      	<td>11.00 am</td> <td>Coffee break</td>
+      </tr>
+      <tr>
+      	<td>11.30 am</td> <td>Second presentation session including discussions
+      	<ul><li>Patricia Murrieta-Flores (University of Chester), <b>Non-locational and fantastic places in Medieval Romances</b></li>
+      	<li>Karl Grossner (Stanford University), <b>Joining Place and Period in Historical Gazetteers</b></li>
+      	<li>Michael Page (Emory University), <b>Atlanta Explorer: Historical Geocoding and the City</b></li></ul></td>
       </tr>
       <tr>
       	<td>12.30 pm</td> <td>Lunch break</td>
       </tr>
       <tr>
-      	<td>1.30 pm</td> <td>Second presentation session including discussions and short break</td>
+      	<td>1.30 pm</td> <td>Third presentation session including discussions
+      	<ul><li>Bruno Martins (University of Lisbon), <b>NLP and IR methods for handling geospatial information in textual documents</b></li>
+      	<li>Christopher Donaldson (University of Birmingham), <b>Extracting and visualizing the geographies in historical travel writing</b></li></ul></td>
       </tr>
       <tr>
-      	<td>3.00 pm</td> <td>Speed presenting and breakout discussions </td>      	
+      	<td>2.30 pm</td> <td>Speed presenting and breakout discussions</td>
       </tr>
-      <tr> <td>5.00 pm</td> <td>Wrap up session including an expert panel discussion</td></tr>
+      <tr>
+      	<td>4.00 pm</td> <td>Coffee break</td>      	
+      </tr>
+      <tr> <td>4.30 pm</td> <td>Wrap up session including an expert panel discussion</td></tr>
+      <tr>
+      	<td>6.00 pm</td> <td>End of the workshop</td>
+      </tr>
       </table>
-  	 
-  	  <p>The workshop will conclude at 6 pm.</p>
-  	  
       <footer class="site-footer">
       </footer>
 
