correct lunch break

--- a/program.html
+++ b/program.html
@@ -43,15 +43,14 @@
       	<td>11.30am</td> <td>Second presentation session including discussions
       	<ul><li>Patricia Murrieta-Flores (University of Chester), <b>Non-locational and fantastic places in Medieval Romances</b></li>
       	<li>Karl Grossner (Stanford University), <b>Joining Place and Period in Historical Gazetteers</b></li>
-      	<li>Michael Page (Emory University), <b>Atlanta Explorer: Historical Geocoding and the City</b></li></ul></td>
-      </tr>
-      <tr>
-      	<td>12.30pm</td> <td>Lunch break</td>
-      </tr>
-      <tr>
-      	<td>1.30pm</td> <td>Third presentation session including discussions
+      	<li>Michael Page (Emory University), <b>Atlanta Explorer: Historical Geocoding and the City</b></li></ul>
+      	Third presentation session including discussions
       	<ul><li>Bruno Martins (University of Lisbon), <b>NLP and IR methods for handling geospatial information in textual documents</b></li>
-      	<li>Christopher Donaldson (University of Birmingham), <b>Extracting and visualizing the geographies in historical travel writing</b></li></ul></td>
+      	<li>Christopher Donaldson (University of Birmingham), <b>Extracting and visualizing the geographies in historical travel writing</b></li></ul>
+      	</td>
+      </tr>
+      <tr>
+      	<td>13.00pm</td> <td>Lunch break</td>
       </tr>
       <tr>
       	<td>2.30pm</td> <td>Speed presenting and breakout discussions</td>
