--- a/program.html
+++ b/program.html
@@ -50,7 +50,7 @@
       	</td>
       </tr>
       <tr>
-      	<td>13.00pm</td> <td>Lunch break</td>
+      	<td>13.00pm</td> <td>Lunch break (probably with a small delay)</td>
       </tr>
       <tr>
       	<td>2.30pm</td> <td>Speed presenting and breakout discussions</td>
