add twitter hashtag

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <p>Co-located with <a href="http://dh2016.adho.org">DH2016</a>. In order to register to the workshop, you need to register to the main conference following this <a href="http://dh2016.adho.org/registration">link</a></p>
 	  <p>After registration, please provide us with information about your spatial humanities project(s) by filling out the following <a href="http://goo.gl/forms/TkBdJqAScf">form</a>, this would allow us to provide you with customized help from experts.</p>
      
+      <p>Use the hastag <b><a href="https://twitter.com/search?f=tweets&q=%23Aplace4places&src=typd" target="_blank">#Aplace4places</a></b> on Twitter to share with the rest of the DH community what's going on during the workshop.</b></p>
+     
       <p><b>Who are organizers:</b></p>
 
       <table>
