new google doc link

--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@
 
       <p><b>When</b>: Monday, 11/Jul/2016: 9:30am - 6:00pm. Save the date!</p>
       <p><b>Where</b>: Kraków, Poland</p>
-      <p><b>How to register</b>:</p>
-      <p>Co-located with <a href="http://dh2016.adho.org">DH2016</a>. In order to register to the workshop, you need to register to the main conference following this <a href="http://dh2016.adho.org/registration">link</a></p>
-	  <p>After registration, please provide us with information about your spatial humanities project(s) by filling out the following <a href="http://goo.gl/forms/TkBdJqAScf">form</a>, this would allow us to provide you with customized help from experts.</p>
      
       <p>Use the hashtag <b><a href="https://twitter.com/search?f=tweets&q=%23Aplace4places&src=typd" target="_blank">#Aplace4places</a></b> on Twitter to share with the rest of the DH community what's going on during the workshop.</b></p>
      
+      <p><b>How to register</b>:</p>
+      <p>Co-located with <a href="http://dh2016.adho.org">DH2016</a>. In order to register to the workshop, you need to register to the main conference following this <a href="http://dh2016.adho.org/registration">link</a></p>
+	  <p>After registration, please provide us with information about your spatial humanities project(s) by filling out the following <a href="http://goo.gl/forms/TkBdJqAScf">form</a>, this would allow us to provide you with customized help from experts.</p>
+
+	<p>Otherwise, please add <a href="https://docs.google.com/document/d/1HIwv1zbLk9yzGiIvFROsJ5qqbSeE97Ncpts96m8SOnw/edit?usp=sharing">here</a> the research topics you would like to focus on the workshop (for participants only)</p>
+
       <p><b>Who are organizers:</b></p>
 
       <table>
