--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 	  <p>After registration, please provide us with information about your spatial humanities project(s) by filling out the following <a href="http://goo.gl/forms/TkBdJqAScf">form</a>, this would allow us to provide you with customized help from experts.</p>
 
-	<p>Otherwise, please add <a href="https://docs.google.com/document/d/1HIwv1zbLk9yzGiIvFROsJ5qqbSeE97Ncpts96m8SOnw/edit?usp=sharing">here</a> the research topics you would like to focus on the workshop (for participants only)</p>
+	<p>Otherwise, please add <a href="https://docs.google.com/document/d/1HIwv1zbLk9yzGiIvFROsJ5qqbSeE97Ncpts96m8SOnw/edit?usp=sharing">here</a> the research topics you would like to focus on the workshop (for participants only).</p>
 
       <p><b>Who are organizers:</b></p>
 
